--- a/Dictionary2/Dictionary2.vcxproj.filters
+++ b/Dictionary2/Dictionary2.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="Trees.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="2-4_Tree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
